--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^2.2.0",
+    "co": "^4.5.4",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-mocha-test": "^0.12.7",
+    "grunt-run-task": "^0.1.2",
     "mocha": "^2.2.4"
   },
   "dependencies": {
